--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+pytest-bdd = "8.1.0"
+requests = "2.32.3"
+colorlog = "6.9.0"
+pylint = "3.3.3"
+playwright = "1.50.0"
+pytest-playwright = "0.7.0"
 
 [dev-packages]
 
